<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="@dimen/small_layout_space"
    android:paddingTop="@dimen/medium_layout_space"
    android:paddingEnd="@dimen/large_layout_space"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/layout_background"
        android:paddingVertical="@dimen/medium_space"
        android:paddingStart="@dimen/large_space"
        android:paddingEnd="@dimen/very_small_space">

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="@dimen/image_size"
            android:layout_height="@dimen/image_size"
            android:src="@drawable/person"
            app:shapeAppearance="@style/radiusImage" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/medium_space"
            android:layout_weight="1"
            android:orientation="vertical"
            android:weightSum="4">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="@font/dm_sans_bold"
                    android:text="@string/ahmed_hassan"
                    android:textColor="@color/main_text_color"
                    android:textSize="@dimen/main_text_size" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@drawable/text_view_background"
                    android:fontFamily="@font/dm_sans_regular"
                    android:paddingHorizontal="@dimen/small_space"
                    android:paddingVertical="@dimen/very_small_space"
                    android:text="@string/_3_hr"
                    android:textColor="@color/white"
                    android:textSize="@dimen/secondary_text_size"
                    android:textStyle="normal" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_space"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/dm_sans_medium"
                    android:text="@string/engineer"
                    android:textColor="@color/secondary_text_color"
                    android:textSize="@dimen/secondary_text_size" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/dm_sans_medium"
                    android:text="@string/russian"
                    android:textColor="@color/secondary_text_color"
                    android:textSize="@dimen/secondary_text_size" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_space"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawablePadding="@dimen/very_small_space"
                    android:fontFamily="@font/dm_sans_regular"
                    android:text="@string/uk"
                    android:textColor="@color/secondary_2_text_color"
                    android:textSize="@dimen/secondary_text_size"
                    app:drawableStartCompat="@drawable/ic_location" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/dm_sans_regular"
                    android:text="@string/_5_days_ago"
                    android:textColor="@color/secondary_3_text_color"
                    android:textSize="@dimen/secondary_text_size" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_space"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/dm_sans_regular"
                    android:text="@string/_150_reviews"
                    android:textColor="@color/main_text_color"
                    android:textSize="@dimen/secondary_text_size" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/small_space"
                    android:fontFamily="@font/dm_sans_medium"
                    android:text="@string/_4_5"
                    android:textColor="@color/main_text_color"
                    android:textSize="@dimen/secondary_text_size" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/very_small_space"
                    android:contentDescription="@string/star_icon"
                    android:src="@drawable/ic_star" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>